--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="header-background header-buttons">
+    <div class="header-buttons">
     {% if 'username' in session %}
         <p><a href="{{ url_for('logout') }}">
             <button><img src="{{ url_for('static', filename='link-icons/logout.svg') }}" alt=logout.svg></button>
@@ -25,6 +25,9 @@
             </a>
             <a href="{{ url_for('currency') }}">
                 <button><img src="{{ url_for('static', filename='link-icons/coins-solid.svg') }}" alt=coins-solid.svg></button>
+            </a>
+            <a href="{{ url_for('chat') }}">
+                <button><img src="{{ url_for('static', filename='link-icons/message-solid.svg') }}" alt=message-solid.svg></button>
             </a>
         </p>
     {% else %}
@@ -43,7 +46,7 @@
         </p>
     {% endif %}
     </div>
-    <div class="center-div-dashboard">
+    <div class="dashboard">
         <h2>Welcome, {{ username }}!</h2>
     </div>
     <p>Dashboard content goes here.</p>
