--- a/templates/login.html
+++ b/templates/login.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-    <h2>Login</h2>
-    <div class="header-background header-buttons">
+    <div class="header-buttons">
     {% if 'username' in session %}
         <p><a href="{{ url_for('index') }}"><button>
                 <img src="{{ url_for('static', filename='link-icons/house-solid.svg') }}" alt=house-solid.svg></button>
