--- a/templates/weather.html
+++ b/templates/weather.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="header-background header-buttons">
+    <div class="header-buttons">
         {% if 'username' in session %}
             <p><a href="{{ url_for('logout') }}">
                     <button><img src="{{ url_for('static', filename='link-icons/logout.svg') }}" alt=logout.svg></button>
@@ -36,96 +36,88 @@
         {% endif %}
     </div>
     <div class="input-section">
-        <div class="input-section-input">
-            <form id="weatherForm" action="/weather" method="post">
-                <label for="user_input"></label>
-                <input type="text" id="user_input" name="user_input" placeholder="City Name or Zip Code" required>
-                <button type="submit">
-                    <img src="{{ url_for('static', filename='link-icons/location.svg') }}" alt=location-solid.svg>
-                </button>
-            </form>
-        </div>
-        <div class="weather-info-table">
-            {% if weather_data %}
-                {% if second_api_data %}
-                    {% set time_of_day = 'Day' if weather_data.current.is_day == 1 else 'Night' %}
-                    <p>{{ weather_data.location.localtime }} and {{ weather_data.current.condition.text }} {{ time_of_day }} in 
-                        {{ weather_data.location.name }}, {{ weather_data.location.region }}, {{ weather_data.location.country }}</p>
-                {% endif %}
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Temp</th>
-                            <th>Feels</th>
-                            <th>Wind</th>
-                            <th>Pressure</th>
-                            <th>Visibility</th>
-                            <th>Gust</th>
-                            <th>Precipitation</th>
-                        </tr>
-                     </thead>
-                    <tbody>
-                        <tr>
-                            <td>{{ weather_data.current.temp_c }}°C</td>
-                            <td>{{ weather_data.current.feelslike_c }}°C</td>
-                            <td>{{ weather_data.current.wind_kph }} km/h</td>
-                            <td>{{ weather_data.current.pressure_mb }} mb</td>
-                            <td>{{ weather_data.current.vis_km }} km</td>
-                            <td>{{ weather_data.current.gust_kph }} kph</td>
-                            <td>{{ weather_data.current.precip_mm }} mm</td>
-                        </tr>
-                        <tr>
-                            <td>{{ weather_data.current.temp_f }}°F</td>
-                            <td>{{ weather_data.current.feelslike_f }}°F</td>
-                            <td>{{ weather_data.current.wind_mph }} mi/h</td>
-                            <td>{{ weather_data.current.pressure_in }} in</td>
-                            <td>{{ weather_data.current.vis_miles }} miles</td>
-                            <td>{{ weather_data.current.gust_mph }} mph</td>
-                            <td>{{ weather_data.current.precip_in }} inches</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <p>Wind Direction: {{ weather_data.current.wind_dir }}, Humidity: {{ weather_data.current.humidity }}, Cloudy: {{ weather_data.current.cloud }}</p>
-        </div>    
+        <form id="weatherForm" action="/weather" method="post">
+            <label for="user_input"></label>
+            <input type="text" id="user_input" name="user_input" placeholder="City Name or Zip Code" required>
+            <button type="submit">
+                <img src="{{ url_for('static', filename='link-icons/location.svg') }}" alt=location-solid.svg>
+            </button>
+        </form>
     </div>
-        <div class="forecast-table-container">
-            <table class="forecast-table">
+    <div class="weather-info-table">
+        {% if weather_data %}
+            {% if second_api_data %}
+                {% set time_of_day = 'Day' if weather_data.current.is_day == 1 else 'Night' %}
+                <p>{{ weather_data.location.localtime }} and {{ weather_data.current.condition.text }} {{ time_of_day }} in 
+                    {{ weather_data.location.name }}, {{ weather_data.location.region }}, {{ weather_data.location.country }}</p>
+            {% endif %}
+            <table>
                 <thead>
                     <tr>
-                        <th>Date</th>
-                        <th>Avg C</th>
-                        <th>Min C</th>
-                        <th>Max C</th>
-                        <th>Avg F</th>
-                        <th>Min F</th>
-                        <th>Max F</th>
-                        <th>Summary</th>
+                        <th>Temp</th>
+                        <th>Feels</th>
+                        <th>Wind</th>
+                        <th>Pressure</th>
+                        <th>Visibility</th>
+                        <th>Gust</th>
+                        <th>Precipitation</th>
                     </tr>
                 </thead>
                 <tbody>
-                    {% for day in second_api_data.forecast %}
-                        <tr>
-                            <td>{{ day.date }}</td>
-                            <td>{{ day.avg_c }}</td>
-                            <td>{{ day.min_c }}</td>
-                            <td>{{ day.max_c }}</td>
-                            <td>{{ day.avg_f }}</td>
-                            <td>{{ day.min_f }}</td>
-                            <td>{{ day.max_f }}</td>
-                            <td>{{ day.summary }}<img src="{{ url_for('static', filename='weather-icons/' + day.icon) }}" alt=f"{{day.icon}}"></td>
-                        </tr>
-                    {% endfor %}
+                    <tr>
+                        <td>{{ weather_data.current.temp_c }}°C</td>
+                        <td>{{ weather_data.current.feelslike_c }}°C</td>
+                        <td>{{ weather_data.current.wind_kph }} km/h</td>
+                        <td>{{ weather_data.current.pressure_mb }} mb</td>
+                        <td>{{ weather_data.current.vis_km }} km</td>
+                        <td>{{ weather_data.current.gust_kph }} kph</td>
+                        <td>{{ weather_data.current.precip_mm }} mm</td>
+                    </tr>
+                    <tr>
+                        <td>{{ weather_data.current.temp_f }}°F</td>
+                        <td>{{ weather_data.current.feelslike_f }}°F</td>
+                        <td>{{ weather_data.current.wind_mph }} mi/h</td>
+                        <td>{{ weather_data.current.pressure_in }} in</td>
+                        <td>{{ weather_data.current.vis_miles }} miles</td>
+                        <td>{{ weather_data.current.gust_mph }} mph</td>
+                        <td>{{ weather_data.current.precip_in }} inches</td>
+                    </tr>
                 </tbody>
             </table>
-        </div>
-        {% endif %}
-            {% if error_message %}
-            <p class="error-message">{{ error_message }}</p>
-            {% endif %}
-
-
-
-
+            <p>Wind Direction: {{ weather_data.current.wind_dir }}, Humidity: {{ weather_data.current.humidity }}, Cloudy: {{ weather_data.current.cloud }}</p>
+    </div>    
+    <table class="forecast-table">
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>Avg C</th>
+                <th>Min C</th>
+                <th>Max C</th>
+                <th>Avg F</th>
+                <th>Min F</th>
+                <th>Max F</th>
+                <th>Summary</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for day in second_api_data.forecast %}
+                <tr>
+                    <td>{{ day.date }}</td>
+                    <td>{{ day.avg_c }}</td>
+                    <td>{{ day.min_c }}</td>
+                    <td>{{ day.max_c }}</td>
+                    <td>{{ day.avg_f }}</td>
+                    <td>{{ day.min_f }}</td>
+                    <td>{{ day.max_f }}</td>
+                    <td>{{ day.summary }}<img src="{{ url_for('static', filename='weather-icons/' + day.icon) }}" alt=f"{{day.icon}}"></td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    {% endif %}
+    {% if error_message %}
+        <p class="error-message">{{ error_message }}</p>
+    {% endif %}
 </body>
 </html>
 
