--- a/static/style.css
+++ b/static/style.css
@@ -203,13 +203,14 @@ button {
 }
 
 .message-box {
-    margin-top: 210px;
+    margin: 0 auto;
+    padding: 20px;
     border-color: black;
     border-width: 2px;
     border-style: solid;
     border-radius: 10px;
     background-color: whitesmoke;
-    height: 80vh;
+    height: 50vh;
     display: flex;
     flex-direction: column;
     width: 80vw;
