--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -47,7 +47,7 @@
     {% endif %}
     </div>
     <div class="dashboard">
-        <h2>Welcome, {{ username }}!</h2>
+        <h2>Welcome, {{ username|capitalize }}!</h2>
     </div>
     <p>Dashboard content goes here.</p>
 
