--- a/templates/chat.html
+++ b/templates/chat.html
@@ -43,6 +43,7 @@
                 <button type="submit" name="join">Join a Room</button>
             </div>
             <button type="submit" name="create" class="create-btn">Create a Room</button>
+            <button type="submit" name="global_chat" class="create-btn">Join Global Chat</button>
         {% else %}
         <label>You need to login</label>
         {% endif %}
