--- a/templates/about.html
+++ b/templates/about.html
@@ -43,8 +43,8 @@
         <p>Registration does`t require email verification</p>
         <p>Please use your Nickname as username while registration</p>
         <p>Use simple password while registration (ex."1234" or "000")</p>
-        <p>From Dash Board you can access : Currency converter with 150+ currencies, Current weather data, weather forecast for 4+ days and chat</p>
-        <p style="font-size: 10px;">12.17.2023</p>
+        <p>From Dash Board you can access : Currency converter with 150+ currencies, Current weather data, weather forecast for 4+ days and Global chat</p>
+        <p style="font-size: 10px;">12.25.2023</p>
         <p>Contact:
             <a href="https://www.linkedin.com/in/yaroslav-ovsiienko">
                 <img src="{{ url_for('static', filename='link-icons/linkedin.svg') }}" alt=linkedin.svg>
