--- a/templates/about.html
+++ b/templates/about.html
@@ -41,7 +41,7 @@
         <p>You have to be logged in to get access to Dashboard Page</p>
         <p>Dashboard Page includes all functionalities available</p>
         <p>Registration does`t require email verification</p>
-        <p>Please use your Nickname as username while registration</p>
+        <p>Please use your Nickname as a username while registration</p>
         <p>Use simple password while registration (ex."1234" or "000")</p>
         <p>From Dash Board you can access : Currency converter with 150+ currencies, Current weather data, weather forecast for 4+ days and Global chat</p>
         <p style="font-size: 10px;">12.25.2023</p>
