--- a/templates/room.html
+++ b/templates/room.html
@@ -35,7 +35,7 @@
         {% endif %}
     </div>
     <div class="message-box">
-        <h2>Chat Room: {{code}}</h2>
+        <h2>Welcome to Global Chat!</h2>
         <div class="messages" id="messages"></div>
         <div class="input">
             <input type="text" rows="3" placeholder="Message" name="message" id="message"/>
@@ -48,13 +48,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.3/socket.io.js"></script>
     <script type="text/javascript">
         var socketio = io();
-
+        
         const messages = document.getElementById("messages");
-
+        
         const createMessage = (name, msg) => {
+            const isMe = name === "{{ session.get('name') }}"; // Check if the message is from the current user
+            const alignmentClass = isMe ? 'right' : 'left';
+        
             const capitalizedName = name.charAt(0).toUpperCase() + name.slice(1);
             const content = `
-            <div class="text">
+            <div class="text ${alignmentClass}">
                 <span>
                     <strong>${capitalizedName}</strong>: ${msg}
                 </span>
@@ -64,11 +67,11 @@
             </div>`;
             messages.innerHTML += content;
         };
-
+        
         socketio.on("message", (data) => {
             createMessage(data.name, data.message);
         });
-
+        
         const sendMessage = () => {
             const message = document.getElementById("message");
             if (message.value === "") return;
@@ -76,6 +79,7 @@
             message.value = "";
         };
     </script>
+    
 
     {% for msg in messages %}
         <script type="text/javascript">
