--- a/static/style.css
+++ b/static/style.css
@@ -199,6 +199,7 @@ button:hover {
 }
 
 .message-box {
+    background-color: #0063ff36;
     margin: 0 auto;
     padding: 5px;
     border-color: black;
