--- a/templates/room.html
+++ b/templates/room.html
@@ -36,7 +36,7 @@
     </div>
     <div class="message-box">
         <div class="messages" id="messages"></div>
-        <div class="input">
+        <div class="chat-input">
             <input type="text" rows="3" placeholder="Message" name="message" id="message"/>
             <button type="button" name="send" id="send-btn" onclick="sendMessage()">
                 Send
