--- a/templates/index.html
+++ b/templates/index.html
@@ -22,15 +22,15 @@
         </p>
     {% else %}
         <p><a href="{{ url_for('login') }}">
-                <button><img src="{{ url_for('static', filename='link-icons/login.svg') }}" alt=login.svg>Login</button>
+                <button><img src="{{ url_for('static', filename='link-icons/login.svg') }}" alt=login.svg></button>
             </a>
             <a href="{{ url_for('register') }}">
-                <button><img src="{{ url_for('static', filename='link-icons/registration.svg') }}" alt=registration.svg>Registration</button>
+                <button><img src="{{ url_for('static', filename='link-icons/registration.svg') }}" alt=registration.svg></button>
             </a>
             <a href="{{ url_for('about') }}">
-                <button><img src="{{ url_for('static', filename='link-icons/info.svg') }}" alt=info.svg>Info</button>
+                <button><img src="{{ url_for('static', filename='link-icons/info.svg') }}" alt=info.svg></button>
             </a>
-            {% endif %}
+    {% endif %}
     </div>
     {% if error_message %}
     <p class="error-message">{{ error_message }}</p>
@@ -39,7 +39,7 @@
         <p></p>
     </div>
     <div class="center-div-main">
-        <p>Share your ideas
+        <p>Contact:
             <a href="https://www.linkedin.com/in/yaroslav-ovsiienko">
                 <img src="{{ url_for('static', filename='link-icons/linkedin.svg') }}" alt=linkedin.svg>
             </a>
